# faster-python

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
api/: fibonacci.py  update.py
nanobind-python/: my_ext.cpp
rusty-python/: Cargo.toml  pyproject.toml
rusty-python/src/: lib.rs  logger.rs
